--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "apiendpoint",
+  "name": "endpoint",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "serverless deploy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.22.15",
+    "@openzeppelin/contracts": "^4.9.3",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "ethers": "^6.7.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "serverless": "^3.34.0"
   }
 }
